--- a/Portfolio_Back_End/ParfolioWebSiteView/Areas/UserAdmin/Views/Shared/_UserAdminLayout.cshtml
+++ b/Portfolio_Back_End/ParfolioWebSiteView/Areas/UserAdmin/Views/Shared/_UserAdminLayout.cshtml
@@ -81,8 +81,8 @@
                             <li>
                                 <a href="javascript:void(0)" aria-expanded="true"><i class="ti-briefcase"></i> <span>Portfolio</span></a>
                                 <ul class="collapse">
-                                    <li><a href="login.html">List</a></li>
-                                    <li><a href="login2.html">Create</a></li>
+                                    <li><a href="/UserAdmin/Portfolio/List">List</a></li>
+                                    <li><a href="/UserAdmin/Portfolio/Create">Create</a></li>
                                 </ul>
                             </li>
 
