--- a/Portfolio_Back_End/ParfolioWebSiteView/Views/Home/PortfolioSinglePage.cshtml
+++ b/Portfolio_Back_End/ParfolioWebSiteView/Views/Home/PortfolioSinglePage.cshtml
@@ -50,14 +50,14 @@
                         <ul>
                             <li><strong>Category</strong>: @Model.PortfolioCategory.Name </li>
                             <li><strong>Client</strong>: @Model.PortfolioDetail.Client</li>
-                            <li><strong>Project date</strong>: @Model.Date.ToShortDateString()</li>
+                            <li><strong>Project date</strong>: @Model.Date.Day @Model.Date.ToString("Y")</li>
                             <li><strong>Project URL</strong>: <a href="@Model.PortfolioDetail.LocatoionURL">@Model.PortfolioDetail.LocatoionURL</a></li>
                         </ul>
                     </div>
                     <div class="portfolio-description">
                         <h2>@Model.Title</h2>
                         <p>
-                            @Model.PortfolioDetail.Descriptoion
+                            @Html.Raw(Model.PortfolioDetail.Descriptoion)
                         </p>
                     </div>
                 </div>
