--- a/Portfolio_Back_End/ParfolioWebSiteView/Views/Assistant/Search.cshtml
+++ b/Portfolio_Back_End/ParfolioWebSiteView/Views/Assistant/Search.cshtml
@@ -70,7 +70,7 @@
                         {
 
                             <div class="post-meta">
-                                <h1 class="article-title">Search Resault</h1>
+                                <h1 class="article-title">All Tags</h1>
 
                                 @foreach (var item in Model.Tags)
                                 {
