main: Detailimage Add + Delete Complate
DetailimagesController + Add(JsonResault) + Delete(JsonResault) Complate

--- a/Portfolio_Back_End/ParfolioWebSiteView/Views/Home/Index.cshtml
+++ b/Portfolio_Back_End/ParfolioWebSiteView/Views/Home/Index.cshtml
@@ -194,7 +194,7 @@
                             <div class="work-box">
                                 <a href="~/img/Porfolio/@work.Image" data-gallery="portfolioGallery" class="portfolio-lightbox">
                                     <div class="work-img">
-                                        <img src="~/img/Porfolio/@work.Image" alt="" class="img-fluid">
+                                        <img src="~/img/Porfolio/@work.Image" alt="" class="w-100 h-auto">
                                     </div>
                                 </a>
                                 <div class="work-content">
@@ -389,7 +389,7 @@
                                     {
                                         <div class="more-info">
                                             <p class="lead">
-                                                You Contact Me Herw
+                                                You Contact Me Here
                                             </p>
                                         </div>
                                     }
