--- a/AdminPanelFront/srtdash/assets/css/styles.css
+++ b/AdminPanelFront/srtdash/assets/css/styles.css
@@ -2840,7 +2840,9 @@ table.dataTable thead td {
     position: relative;
     width: 300px;
     height:auto;
-
+    visibility:visible;
+    opacity: 0;
+    transition: all 0.3s ease-in;
 }
 
 
