--- a/Portfolio_Back_End/ParfolioWebSiteView/Areas/UserAdmin/Views/Portfolio/Create.cshtml
+++ b/Portfolio_Back_End/ParfolioWebSiteView/Areas/UserAdmin/Views/Portfolio/Create.cshtml
@@ -73,6 +73,7 @@
                         <div class="custom-file">
                             <input type="file" class="custom-file-input" asp-for="Photo">
                             <label class="custom-file-label" asp-for="Photo">Choose Image</label>
+                            <span asp-validation-for="Photo" class="text-danger my-1"></span>
                         </div>
                     </div>
 
@@ -100,6 +101,17 @@
                         <label asp-for="PortfolioDetail.Descriptoion">Description</label>
                         <textarea class="form-control" asp-for="PortfolioDetail.Descriptoion" id="Descriptoion" rows="3"></textarea>
                         <span asp-validation-for="PortfolioDetail.Descriptoion" class="text-danger my-1"></span>
+                    </div>
+                    <p class="p-1">Detail Images</p>
+                    <div class="input-group mb-3">
+                        <div class="input-group-prepend">
+                            <span class="input-group-text">Upload Image</span>
+                        </div>
+                        <div class="custom-file">
+                            <input type="file" class="custom-file-input" multiple  asp-for="PortfolioDetail.Photos">
+                            <label class="custom-file-label"  asp-for="PortfolioDetail.Photos">Choose Image</label>
+                            <span asp-validation-for="PortfolioDetail.Photos" class="text-danger my-1"></span>
+                        </div>
                     </div>
                     <div class="form-group col-12">
                         <button type="submit" class="btn btn-primary mt-4 pr-4 pl-4">Submit</button>
