--- a/Portfolio_Back_End/ParfolioWebSiteView/Areas/UserAdmin/Views/Portfolio/Show.cshtml
+++ b/Portfolio_Back_End/ParfolioWebSiteView/Areas/UserAdmin/Views/Portfolio/Show.cshtml
@@ -1,5 +1,6 @@
 ﻿@model Portfolio
 @{
+    string namesss = "@sweetalert2";
 }
 
 @section header_link {
@@ -20,6 +21,8 @@
     <!-- modernizr css -->
     <script src="~/Admin/assets/js/vendor/modernizr-2.8.3.min.js"></script>
 
+    <link href="//cdn.jsdelivr.net/npm/@namesss/theme-dark@4/dark.css" rel="stylesheet">
+
     <style>
         .image-box {
             position: relative;
@@ -32,6 +35,14 @@
             bottom: 10px;
             left: 50%;
             transform: translate(-50%,0);
+        }
+
+        #file-ip-1-preview {
+            display: none;
+        }
+
+        #editfile-ip-1-preview {
+            display: none;
         }
     </style>
 
@@ -83,12 +94,12 @@
                             </tr>
                         </tbody>
                     </table>
-                    <div>
+                    <div id="images">
                         <div class="my-2 d-flex justify-content-between">
                             <h4>
                                 Detail Images
                             </h4>
-                            <a class="btn btn-success" href="/UserAdmin/Portfolio/Create"><i class="ti-plus"></i></a>
+                            <button class="btn btn-success" data-toggle="modal" data-target="#imageModalCenter"><i class="ti-plus"></i></button>
                         </div>
                         <div class="d-flex justify-content-center flex-wrap">
                             @foreach (var item in Model.PortfolioDetail.DetailImages)
@@ -96,24 +107,51 @@
                                 <div class="d-inline-block image-box m-2">
                                     <img class="img-fluid" src="~/img/PorfolioDetails/@item.Image" alt="">
                                     <div class="box-item">
-                                        <a href="" class="btn btn-sm btn-primary"> Edit</a>
-                                        <a href="" class="btn btn-sm btn-danger">Dele</a>
+                                        <a href="/UserAdmin/Detailimage/Delete/@item.Id" class="btn delete-btn btn-sm btn-danger"><i class="fa fa-trash-o"></i></a>
                                     </div>
                                 </div>
                             }
 
-
                         </div>
                     </div>
-
-
-
                 </div>
             </div>
         </div>
     </div>
 </div>
 
+<div class="modal fade" id="imageModalCenter">
+    <div class="modal-dialog modal-dialog-centered" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title">Details Image Add</h5>
+                <button type="button" class="close" data-dismiss="modal"><span>&times;</span></button>
+            </div>
+            <div class="modal-body">
+                <div class="alert alert-warning" role="alert">
+                    <strong>Warning!</strong>  Your Maxumum Image Limit 5.
+                </div>
+                <form id="addForm" enctype="multipart/form-data" class="input-group mb-3">
+                    <input id="pid" type="hidden" value="@Model.Id" />
+                    <div class="input-group-prepend">
+                        <span class="input-group-text">Upload</span>
+                    </div>
+                    <div class="custom-file">
+                        <input type="file" accept="image/*" required onchange="showPreview(event);" class="custom-file-input" id="file-ip-1">
+                        <label class="custom-file-label" for="file-ip-1">Choose Image</label>
+                    </div>
+                    <div class="w-100 d-flex mt-3 justify-content-center">
+                        <img id="file-ip-1-preview" class="img-fluid" src="0" alt="your image" />
+                    </div>
+                </form>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                <button form="addForm" type="submit" class="btn btn-primary">Save changes</button>
+            </div>
+        </div>
+    </div>
+</div>
 
 
 @section footer_link{
@@ -128,8 +166,101 @@
     <script src="~/Admin/assets/js/jquery.slimscroll.min.js"></script>
     <script src="~/Admin/assets/js/jquery.slicknav.min.js"></script>
 
+    <script>
+        $(document).ready(() => {
+            $(document).on('submit', '#addForm', (e) => {
+                e.preventDefault();
+                let file = $("#file-ip-1")[0].files[0];
+                var form_data = new FormData();
+                form_data.append('file', file);
+                form_data.append('id', $("#pid").val())
+                $.ajax({
+                    url: '/UserAdmin/Detailimage/Add',
+                    headers: {
+                        'RequestVerificationToken': $('input[name="__RequestVerificationToken"]').val()
+                    },
+                    type: 'POST',
+                    data: form_data,
+                    contentType: false,
+                    processData: false,
+                    success: (response) => {
+                        if (response.hasOwnProperty('status') && response.status === 201) {
+                            location.href = '/UserAdmin/Portfolio/Show/' + $("#pid").val();
+                        } else if (response.hasOwnProperty('status') && response.status === 400) {
+                            alert("Your Maximum Image Limit 5")
+                        } else {
+                            alert("Not Saved Image.Plase Again Send.");
+                        }
+                    }
+                })
+            });
+
+
+        });
+
+        $(document).on('click', '.delete-btn', function (e) {
+            e.preventDefault();
+            let url = $(this).attr("href");
+            let element = this.parentElement.parentElement;
+            var __RequestVerificationToken = $("input[name='__RequestVerificationToken']").val();
+            Swal.fire({
+                title: 'Silmək istədiyinizdən əminsinizmi?',
+                text: "Sildikdən sonra geri qaytarmaq mümkün olmayacaq!",
+                type: 'warning',
+                showCancelButton: true,
+                confirmButtonColor: '#3085d6',
+                cancelButtonColor: '#d33',
+                confirmButtonText: 'Sil',
+                cancelButtonText: 'Geri'
+            }).then((result) => {
+                if (result.value) {
+                    $.ajax({
+                        url: url,
+                        type: "get",
+                        beforeSend: function (request) {
+                            request.setRequestHeader('RequestVerificationToken', $("input[name='__RequestVerificationToken']").val());
+                        },
+                        dataType: "json",
+                        success: function (response) {
+                            if (response.status == 201) {
+                                //console.log("dada")
+                                Swal.fire(
+                                    'Silindi!',
+                                    '',
+                                    'success'
+                                )
+                                //toastr.success(response.message)
+                                /*setTimeout(function () {
+                                    window.location.reload();
+                                }, 200)*/
+                                element.outerHTML = '';
+                            }
+                            else if (response.status == 400) {
+                                //toastr.error(response.message)
+                            }
+                        }
+                    });
+                }
+            })
+        });
+
+
+        function showPreview(event) {
+            if (event.target.files.length > 0) {
+                var src = URL.createObjectURL(event.target.files[0]);
+                var preview = document.getElementById("file-ip-1-preview");
+                preview.src = src;
+                preview.style.display = "block";
+            }
+        }
+
+
+
+
+    </script>
+
     <!-- others plugins -->
     <script src="~/Admin/assets/js/plugins.js"></script>
     <script src="~/Admin/assets/js/scripts.js"></script>
-
+    <script src="//cdn.jsdelivr.net/npm/sweetalert2@11/dist/sweetalert2.min.js"></script>
 }
