--- a/Portfolio_Back_End/ParfolioWebSiteView/Areas/UserAdmin/Views/Portfolio/Show.cshtml
+++ b/Portfolio_Back_End/ParfolioWebSiteView/Areas/UserAdmin/Views/Portfolio/Show.cshtml
@@ -204,8 +204,8 @@
             let element = this.parentElement.parentElement;
             var __RequestVerificationToken = $("input[name='__RequestVerificationToken']").val();
             Swal.fire({
-                title: 'Silmək istədiyinizdən əminsinizmi?',
-                text: "Sildikdən sonra geri qaytarmaq mümkün olmayacaq!",
+                title: 'Are You Sure Delete?',
+                text: "Unable to return after deletion!",
                 type: 'warning',
                 showCancelButton: true,
                 confirmButtonColor: '#3085d6',
@@ -223,20 +223,20 @@
                         dataType: "json",
                         success: function (response) {
                             if (response.status == 201) {
-                                //console.log("dada")
                                 Swal.fire(
-                                    'Silindi!',
+                                    'Deleted!',
                                     '',
                                     'success'
                                 )
-                                //toastr.success(response.message)
-                                /*setTimeout(function () {
-                                    window.location.reload();
-                                }, 200)*/
+                                
                                 element.outerHTML = '';
                             }
                             else if (response.status == 400) {
-                                //toastr.error(response.message)
+                                Swal.fire(
+                                    'Don"t Deleted',
+                                    '',
+                                    'error'
+                                )
                             }
                         }
                     });
