--- a/Portfolio_Back_End/ParfolioWebSiteView/Areas/UserAdmin/Views/Referance/List.cshtml
+++ b/Portfolio_Back_End/ParfolioWebSiteView/Areas/UserAdmin/Views/Referance/List.cshtml
@@ -1,4 +1,4 @@
-﻿@model IList<Portfolio>
+﻿@model IList<Referance>
 
 @section header_link{
     <link rel="shortcut icon" type="image/png" href="assets/images/icon/favicon.ico">
@@ -29,11 +29,11 @@
     <div class="row">
         <!-- Primary table start -->
         <div class="col-12  mt-5">
-            @if (TempData["PortfolioAlert"] != null)
+            @if (TempData["ReferanceAlert"] != null)
             {
                 <div class="col-12 mt-2 alert-dismiss">
                     <div class="alert alert-primary alert-dismissible fade show" role="alert">
-                        @TempData["PortfolioAlert"].ToString()
+                        @TempData["ReferanceAlert"].ToString()
                         <button type="button" class="close" data-dismiss="alert" aria-label="Close">
                             <span class="fa fa-times"></span>
                         </button>
@@ -43,17 +43,16 @@
             <div class="card">
                 <div class="card-body">
                     <div class="d-flex my-3 justify-content-between">
-                        <h4 class="header-title">Portfolio List</h4>
-                        <a href="/UserAdmin/Portfolio/Create" class="btn btn-success"><i class="ti-plus"></i></a>
+                        <h4 class="header-title">Referance List</h4>
+                        <a href="/UserAdmin/Referance/Create" class="btn btn-success"><i class="ti-plus"></i></a>
                     </div>
                     <div class="data-tables datatable-primary">
                         <table id="dataTable2" class=" w-100 text-center">
                             <thead class="text-capitalize">
                                 <tr>
-                                    <th>Title </th>
-                                    <th>Category</th>
-                                    <th>Client</th>
-                                    <th>Date</th>
+                                    <th>Name </th>
+                                    <th>Title</th>
+                                    <th>Image</th>
                                     <th>Action</th>
                                 </tr>
                             </thead>
@@ -61,14 +60,12 @@
                                 @foreach (var item in Model)
                                 {
                                     <tr>
-                                        <td>@item.Title</td>
-                                        <td>@item.PortfolioCategory.Name </td>
+                                        <td>@item.Name </td>
+                                        <td>@Html.Raw(item.Title)</td>
                                         <td>
-                                            @item.PortfolioDetail.Client 
+                                            <img style="width: 120px; height: auto;" class="" src="~/img/Refreance/@item.Image" />
                                         </td>
-                                        <td>@item.Date</td>
                                         <td>
-                                            <a href="/UserAdmin/Portfolio/Show/@item.Id" class="text-primary"><span class="ti-eye"></span></a>
                                             <a href="/UserAdmin/Portfolio/Update/@item.Id" class="text-warning mx-2"><span class="fa fa-edit"></span></a>
                                             <a onclick="return confirm('Are You Sure Delete?')" href="/UserAdmin/Portfolio/Delete/@item.Id" class="text-danger"><i class="ti-trash"></i></a>
                                         </td>
