--- a/Portfolio_Back_End/ParfolioWebSiteView/Areas/UserAdmin/Views/Shared/_UserAdminLayout.cshtml
+++ b/Portfolio_Back_End/ParfolioWebSiteView/Areas/UserAdmin/Views/Shared/_UserAdminLayout.cshtml
@@ -89,8 +89,8 @@
                             <li>
                                 <a href="javascript:void(0)" aria-expanded="true"><i class="bi bi-people"></i> <span>Referans</span></a>
                                 <ul class="collapse">
-                                    <li><a href="login.html">List</a></li>
-                                    <li><a href="login2.html">Create</a></li>
+                                    <li><a href="/UserAdmin/Referance/List">List</a></li>
+                                    <li><a href="/UserAdmin/Referance/Create">Create</a></li>
                                 </ul>
                             </li>
 
