main: Referance Update Complate
Referance Controller Update Method Complate

--- a/Portfolio_Back_End/ParfolioWebSiteView/Areas/UserAdmin/Views/Referance/Create.cshtml
+++ b/Portfolio_Back_End/ParfolioWebSiteView/Areas/UserAdmin/Views/Referance/Create.cshtml
@@ -63,7 +63,7 @@
                     {
                         <div>
                             <label class="col-form-label d-block">Current Image</label>
-                            <img style="width:300px;height:auto;" src="~/img/Home/@Model.Image" />
+                            <img style="width:300px;height:auto;" src="~/img/Refreance/@Model.Image" />
                         </div>
                     }
                     <div class="form-group col-12">
