main: Referance Delete Complate
ReferacnceController Delete Method Complated

--- a/Portfolio_Back_End/ParfolioWebSiteView/Areas/UserAdmin/Views/Referance/Create.cshtml
+++ b/Portfolio_Back_End/ParfolioWebSiteView/Areas/UserAdmin/Views/Referance/Create.cshtml
@@ -56,6 +56,7 @@
                         <div class="custom-file">
                             <input type="file" class="custom-file-input" accept="image/jpeg,image/jpg,image/png,image/gif,image/jfif" asp-for="Photo">
                             <label class="custom-file-label" asp-for="Photo">Choose Image</label>
+                            <span asp-validation-for="Photo" class="text-danger my-1"></span>
                         </div>
                     </div>
                     
