--- a/Portfolio_Back_End/ParfolioWebSiteView/Areas/UserAdmin/Views/Shared/_UserAdminLayout.cshtml
+++ b/Portfolio_Back_End/ParfolioWebSiteView/Areas/UserAdmin/Views/Shared/_UserAdminLayout.cshtml
@@ -97,8 +97,8 @@
                             <li>
                                 <a href="javascript:void(0)" aria-expanded="true"><i class="bi bi-chat-left-text"></i> <span>Blog</span></a>
                                 <ul class="collapse">
-                                    <li><a href="login.html">List</a></li>
-                                    <li><a href="login2.html">Create</a></li>
+                                    <li><a href="/UserAdmin/Blog/List">List</a></li>
+                                    <li><a href="/UserAdmin/Blog/Create">Create</a></li>
                                 </ul>
                             </li>
 
