--- a/Portfolio_Back_End/ParfolioWebSiteView/Areas/UserAdmin/Views/Blog/List.cshtml
+++ b/Portfolio_Back_End/ParfolioWebSiteView/Areas/UserAdmin/Views/Blog/List.cshtml
@@ -68,7 +68,7 @@
                                         </td>
                                         <td>@item.Date.ToString("G")</td>
                                         <td>
-                                            <a href="/UserAdmin/Portfolio/Blog/@item.Id" class="text-warning mx-2"><span class="fa fa-edit"></span></a>
+                                            <a href="/UserAdmin/Blog/Update/@item.Id" class="text-warning mx-2"><span class="fa fa-edit"></span></a>
                                             <a onclick="return confirm('Are You Sure Delete?')" href="/UserAdmin/Blog/Delete/@item.Id" class="text-danger"><i class="ti-trash"></i></a>
                                         </td>
                                     </tr>
