--- a/Portfolio_Back_End/ParfolioWebSiteView/Views/Home/Index.cshtml
+++ b/Portfolio_Back_End/ParfolioWebSiteView/Views/Home/Index.cshtml
@@ -284,7 +284,7 @@
                     {
                         <div class="col-md-4">
                             <div class="card card-blog">
-                                <div class="card-img">
+                                <div class="card-img d-flex justify-content-center">
                                     <a asp-controller="Home" asp-action="SinglePage" asp-route-id="@item.Id"><img src="~/img/Blog/@item.Image" alt="" class="img-fluid"></a>
                                 </div>
                                 <div class="card-body">
