main: Blog Update
Past Commit BlogController Create + List + Delete Complate :Now BlogController Update  Complate

--- a/Portfolio_Back_End/ParfolioWebSiteView/Areas/UserAdmin/Views/Blog/Create.cshtml
+++ b/Portfolio_Back_End/ParfolioWebSiteView/Areas/UserAdmin/Views/Blog/Create.cshtml
@@ -98,7 +98,7 @@
 
                     @if (!ViewBag.IsCreate)
                     {
-                        <div>
+                        <div class="my-3">
                             <label class="col-form-label d-block">Current Image</label>
                             <img style="width:300px;height:auto;" src="~/img/Blog/@Model.Blog.Image" />
                         </div>
